--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "scripts": {
       "dev": "esbuild src/index.ts --bundle --loader:.glsl=text --loader:.ply=file --loader:.obj=file --outfile=dist/three-nanite.js --target=es2020 --format=esm --watch",
-      "serve": "serve -s dist"
+      "serve": "serve -s dist -p 8080"
     },
     "devDependencies": {
       "esbuild": "^0.15.7",
